# ec2-capacity-blocks-for-ml-pricing-json

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: claude-code-review.yml  claude-code.yml  claude.yml  scrape-pricing.yml  test.yml
data/: pricing.json
src/: __init__.py  models.py  parser.py  scraper.py
tests/: test_parser.py
