[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ec2-capacity-blocks-pricing"
version = "1.0.0"
description = "Scraper for EC2 Capacity Blocks for ML pricing data"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
scrape-pricing = "src.scraper:main"

[tool.ruff]
line-length = 100
target-version = "py310"
